option('asciidoctor', type: 'feature', value: 'auto', description: 'Generate manpages')
option('shar', type: 'feature', value: 'auto', description: 'Use with shell archives')
option('go', type: 'feature', value: 'auto', description: 'Use golang for FvwmPrompt')
option('fontconfig', type: 'feature', value: 'auto', description: 'Use fontconfig')
option('freetype', type: 'feature', value: 'auto', description: 'Use freetype')
option('fribidi', type: 'feature', value: 'auto', description: 'Use fribidi')
option('ncurses', type: 'feature', value: 'auto', description: 'Use ncurses')
option('libpng', type: 'feature', value: 'auto', description: 'Use libpng')
option('readline', type: 'feature', value: 'auto', description: 'Use libreadline')
option('rsvg', type: 'feature', value: 'auto', description: 'Use librsvg')
option('sm', type: 'feature', value: 'auto', description: 'Use sm')
option('xcursor', type: 'feature', value: 'auto', description: 'Use xcursor')
option('xent', type: 'feature', value: 'auto', description: 'Use xent')
option('xi', type: 'feature', value: 'auto', description: 'Use xi')
option('xpm', type: 'feature', value: 'auto', description: 'Use libxpm')
