option('mandoc', type: 'boolean', value: false, description: 'Enable generation of man pages')
option('htmldoc', type: 'boolean', value: false, description: 'Enable generation of HTML man pages')
option('png', type: 'boolean', value: true, description: 'Enable png support')
option('rsvg', type: 'boolean', value: false, description: 'Enable svg support')
option('xent', type: 'boolean', value: false, description: 'Enable shaped window support')
option('sm', type: 'feature', value: 'auto', description: 'Enable session management support')
option('iconv', type: 'feature', value: 'auto', description: 'Enable iconv support')
option('bidi', type: 'feature', value: 'auto', description: 'Enable fribidi support')
option('nls', type: 'feature', value: 'auto', description: 'Enable NLS')