default_confdir = join_paths(
    get_option('datadir'),
    meson.project_name(),
    'default-config',
)

default_conf_files = [
    'images/background/bg1.png',
    'images/background/bg2.png',
    'images/background/bg3.png',
    'images/bgicons/bg1.png',
    'images/bgicons/bg2.png',
    'images/bgicons/bg3.png',
    'images/icons/win/bottom.png',
    'images/icons/win/close.png',
    'images/icons/win/destroy.png',
    'images/icons/win/done.png',
    'images/icons/win/iconify.png',
    'images/icons/win/lower.png',
    'images/icons/win/max.png',
    'images/icons/win/move.png',
    'images/icons/win/raise.png',
    'images/icons/win/resize.png',
    'images/icons/win/sendto.png',
    'images/icons/win/shade.png',
    'images/icons/win/stays.png',
    'images/icons/win/sticky.png',
    'images/icons/win/title.png',
    'images/icons/win/top.png',
    'images/icons/apps.png',
    'images/icons/conf.png',
    'images/icons/help.png',
    'images/icons/info.png',
    'images/icons/programs.png',
    'images/icons/quit.png',
    'images/icons/refresh.png',
    'images/icons/restart.png',
    'images/icons/run_arrow.png',
    'images/icons/terminal.png',
    'images/icons/wallpaper.png',
    'images/fvwm-logo-small.png',
    'FvwmScript-ConfirmCopyConfig',
    'FvwmScript-ConfirmQuit',
    'FvwmScript-DateTime',
    'stalonetrayrc',
    'config',
]

install_data(
    default_conf_files,
    install_dir: default_confdir,
    preserve_path: true,
)
