## This is a -*- Makefile -*-
## Process this file with automake to create Makefile.in

EXTRA_DIST = ANNOUNCE BUGS DEVELOPERS FAQ TODO Y2K-Compliance \
	color_combos error_codes fvwm.lsm	\
	m4_hacks \
	run_man2html.sh txt2html.sh

HTML = cvs.html docs.html download.html features.html ftp.html index.html \
	links.html mailinglist.html			  		  \
	mod_changes.html mod_concept.html				  \
	mod_f2m_communication.html mod_initialization.html		  \
	mod_m2f_communication.html mod_security.html modules.html
