fvwm_sources = [
  'fvwm/add_window.c',
  'fvwm/bindings.c',
  'fvwm/borders.c',
  'fvwm/builtins.c',
  'fvwm/cmdparser_old.c',
  'fvwm/colormaps.c',
  'fvwm/colorset.c',
  'fvwm/conditional.c',
  'fvwm/condrc.c',
  'fvwm/cursor.c',
  'fvwm/decorations.c',
  'fvwm/events.c',
  'fvwm/ewmh.c',
  'fvwm/ewmh_conf.c',
  'fvwm/ewmh_events.c',
  'fvwm/ewmh_icons.c',
  'fvwm/ewmh_names.c',
  'fvwm/execcontext.c',
  'fvwm/expand.c',
  'fvwm/focus.c',
  'fvwm/focus_policy.c',
  'fvwm/frame.c',
  'fvwm/functable.c',
  'fvwm/functable_complex.c',
  'fvwm/functions.c',
  'fvwm/fvwm3.c',
  'fvwm/geometry.c',
  'fvwm/icccm2.c',
  'fvwm/icons.c',
  'fvwm/infostore.c',
  'fvwm/menubindings.c',
  'fvwm/menucmd.c',
  'fvwm/menudim.c',
  'fvwm/menugeometry.c',
  'fvwm/menuitem.c',
  'fvwm/menus.c',
  'fvwm/menustyle.c',
  'fvwm/misc.c',
  'fvwm/modconf.c',
  'fvwm/module_interface.c',
  'fvwm/module_list.c',
  'fvwm/move_resize.c',
  'fvwm/placement.c',
  'fvwm/read.c',
  'fvwm/schedule.c',
  'fvwm/session.c',
  'fvwm/stack.c',
  'fvwm/style.c',
  'fvwm/update.c',
  'fvwm/virtual.c',
  'fvwm/windowlist.c',
  'fvwm/windowshade.c',
]